[gd_scene load_steps=11 format=2]

[ext_resource path="res://fonts/RobotoCondensed-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://fonts/amon_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/pages/adventure/scenes/EndingChoice.gd" type="Script" id=3]
[ext_resource path="res://images/endings/SOUFLE.png" type="Texture" id=4]
[ext_resource path="res://images/new_player.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
border_width_bottom = 2

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.92549, 0.929412, 0.94902, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.92549, 0.929412, 0.94902, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="ChapterChoice" type="Panel"]
margin_right = 446.0
margin_bottom = 257.0
rect_min_size = Vector2( 0, 260 )
rect_pivot_offset = Vector2( -103.663, -52.0355 )
mouse_filter = 1
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 81.0
margin_top = 5.0
margin_right = 302.0
margin_bottom = 137.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0.760784, 0.666667, 1 )
text = "On ne fait pas de bixous Ã  un dragon"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="click" type="Panel" parent="."]
margin_left = 59.0
margin_top = 168.0
margin_right = 151.0
margin_bottom = 251.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="click"]
margin_left = 50.2754
margin_top = 46.8071
margin_right = 90.2754
margin_bottom = 94.8072
rect_rotation = -179.267
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = ">"

[node name="Oups" type="Label" parent="click"]
margin_left = 6.86934
margin_top = 31.9421
margin_right = 87.8693
margin_bottom = 79.9421
rect_rotation = 0.699002
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Oups"

[node name="Button" type="TextureButton" parent="click"]
margin_left = -1.0
margin_top = -1.0
margin_right = 91.0
margin_bottom = 82.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndingType" type="Polygon2D" parent="."]
position = Vector2( -22.5136, 0.529732 )
color = Color( 0.878431, 0.886275, 0.898039, 1 )
polygon = PoolVector2Array( 23.0571, 254.36, 35.7994, 254.36, 96.6792, -0.0140231, 80.1615, -0.485962, 23.0571, 241.146 )

[node name="Label" type="Label" parent="EndingType"]
margin_left = 47.0868
margin_top = 145.034
margin_right = 96.0868
margin_bottom = 159.034
rect_rotation = -76.6256
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Bonne fin"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nouveau_billy" type="Panel" parent="."]
margin_left = 295.959
margin_top = 162.457
margin_right = 440.959
margin_bottom = 249.457
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="nouveau_billy"]
margin_left = 0.966107
margin_top = 56.6046
margin_right = 40.9661
margin_bottom = 87.6047
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Nouveau Billy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="nouveau_billy"]
margin_right = 145.0
margin_bottom = 87.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="nouveau_billy"]
position = Vector2( 71.5449, 28.0304 )
scale = Vector2( 0.0996552, 0.0996552 )
texture = ExtResource( 5 )

[node name="Icone" type="Sprite" parent="."]
position = Vector2( 366.429, 75.1195 )
texture = ExtResource( 4 )

[connection signal="pressed" from="click/Button" to="." method="_on_oups_pressed"]
[connection signal="pressed" from="nouveau_billy/Button" to="." method="_on_bouton_billy_pressed"]
